Add basic table

--- a/index.html
+++ b/index.html
@@ -6,8 +6,75 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Plan lekcji i zastępstw</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
+    <table class="poniedzialek">
+      <caption>
+        PONIEDZIAŁEK
+      </caption>
+
+      <tbody>
+        <tr>
+          <td>1. 8:00</td>
+          <td>Nauczyciel</td>
+          <td>Lekcja 1</td>
+          <td>14</td>
+        </tr>
+        <tr>
+          <td>2. 8:00</td>
+          <td>Nauczyciel</td>
+          <td>Lekcja 2</td>
+          <td>14</td>
+        </tr>
+        <tr>
+          <td>3. 8:00</td>
+          <td>Nauczyciel</td>
+          <td>Lekcja 3</td>
+          <td>14</td>
+        </tr>
+        <tr>
+          <td>4. 8:00</td>
+          <td>Nauczyciel</td>
+          <td>Lekcja 4</td>
+          <td>14</td>
+        </tr>
+        <tr>
+          <td>5. 8:00</td>
+          <td>Nauczyciel</td>
+          <td>Lekcja 5</td>
+          <td>14</td>
+        </tr>
+        <tr>
+          <td>6. 8:00</td>
+          <td>Nauczyciel</td>
+          <td>Lekcja 6</td>
+          <td>14</td>
+        </tr>
+        <tr>
+          <td>7. 8:00</td>
+          <td>Nauczyciel</td>
+          <td>Lekcja 7</td>
+          <td>14</td>
+        </tr>
+        <tr>
+          <td>8. 8:00</td>
+          <td>Nauczyciel</td>
+          <td>Lekcja 8</td>
+          <td>14</td>
+        </tr>
+        <tr>
+          <td>9. 8:00</td>
+          <td>Nauczyciel</td>
+          <td>Lekcja 9</td>
+          <td>14</td>
+        </tr>
+      </tbody>
+    </table>
+
     <script src="script.js"></script>
   </body>
 </html>
