Add checkbox menu

--- a/index.html
+++ b/index.html
@@ -12,69 +12,99 @@
     />
   </head>
   <body>
-    <table class="poniedzialek">
-      <caption>
-        PONIEDZIAŁEK
-      </caption>
+    <div class="teachers">
+      <!-- <button class="teachers__send" id="teachers__send">
+        Wyślij nauczycieli
+      </button> -->
+      <form class="teachers__checkboxContainer" name="" id="">
+        <input type="checkbox" class="teachers__checkbox" value="Joanna Zamora"
+          >Joanna Zamora</input
+        >
+        <input type="checkbox"class="teachers__checkbox" value="Janusz Nowak"
+          >Janusz Nowak</input
+        >
+        <input type="checkbox" class="teachers__checkbox" value="Dagmara Jaskólska"
+          >Dagmara Jaskólska</input
+        >
+        <input type="checkbox"class="teachers__checkbox" value="Beata Placek"
+          >Beata Placek</input
+        >
+        <input type="checkbox"class="teachers__checkbox" value="Marcin Rał">Marcin Rał</input>
+      </form>
+    </div>
+    <div class="container">
+      <div class="absentTeachers">
+        <ol class="absentTeachers__list">
+          <li class="absentTeachers__person">Joanna Zamora</li>
+          <li class="absentTeachers__person">Janusz Nowak</li>
+          <li class="absentTeachers__person">Dagmara Jaskólska</li>
+          <li class="absentTeachers__person">Beata Placek</li>
+          <li class="absentTeachers__person">Marcin Rał</li>
+        </ol>
+      </div>
+      <table class="poniedzialek">
+        <caption>
+          PONIEDZIAŁEK
+        </caption>
 
-      <tbody>
-        <tr>
-          <td>1. 8:00</td>
-          <td>Nauczyciel</td>
-          <td>Lekcja 1</td>
-          <td>14</td>
-        </tr>
-        <tr>
-          <td>2. 8:00</td>
-          <td>Nauczyciel</td>
-          <td>Lekcja 2</td>
-          <td>14</td>
-        </tr>
-        <tr>
-          <td>3. 8:00</td>
-          <td>Nauczyciel</td>
-          <td>Lekcja 3</td>
-          <td>14</td>
-        </tr>
-        <tr>
-          <td>4. 8:00</td>
-          <td>Nauczyciel</td>
-          <td>Lekcja 4</td>
-          <td>14</td>
-        </tr>
-        <tr>
-          <td>5. 8:00</td>
-          <td>Nauczyciel</td>
-          <td>Lekcja 5</td>
-          <td>14</td>
-        </tr>
-        <tr>
-          <td>6. 8:00</td>
-          <td>Nauczyciel</td>
-          <td>Lekcja 6</td>
-          <td>14</td>
-        </tr>
-        <tr>
-          <td>7. 8:00</td>
-          <td>Nauczyciel</td>
-          <td>Lekcja 7</td>
-          <td>14</td>
-        </tr>
-        <tr>
-          <td>8. 8:00</td>
-          <td>Nauczyciel</td>
-          <td>Lekcja 8</td>
-          <td>14</td>
-        </tr>
-        <tr>
-          <td>9. 8:00</td>
-          <td>Nauczyciel</td>
-          <td>Lekcja 9</td>
-          <td>14</td>
-        </tr>
-      </tbody>
-    </table>
-
+        <tbody>
+          <tr>
+            <td>1. 8:00</td>
+            <td>Nauczyciel</td>
+            <td>Lekcja 1</td>
+            <td>14</td>
+          </tr>
+          <tr>
+            <td>2. 8:00</td>
+            <td>Nauczyciel</td>
+            <td>Lekcja 2</td>
+            <td>14</td>
+          </tr>
+          <tr>
+            <td>3. 8:00</td>
+            <td>Nauczyciel</td>
+            <td>Lekcja 3</td>
+            <td>14</td>
+          </tr>
+          <tr>
+            <td>4. 8:00</td>
+            <td>Nauczyciel</td>
+            <td>Lekcja 4</td>
+            <td>14</td>
+          </tr>
+          <tr>
+            <td>5. 8:00</td>
+            <td>Nauczyciel</td>
+            <td>Lekcja 5</td>
+            <td>14</td>
+          </tr>
+          <tr>
+            <td>6. 8:00</td>
+            <td>Nauczyciel</td>
+            <td>Lekcja 6</td>
+            <td>14</td>
+          </tr>
+          <tr>
+            <td>7. 8:00</td>
+            <td>Nauczyciel</td>
+            <td>Lekcja 7</td>
+            <td>14</td>
+          </tr>
+          <tr>
+            <td>8. 8:00</td>
+            <td>Nauczyciel</td>
+            <td>Lekcja 8</td>
+            <td>14</td>
+          </tr>
+          <tr>
+            <td>9. 8:00</td>
+            <td>Nauczyciel</td>
+            <td>Lekcja 9</td>
+            <td>14</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
