Add animations to checkboxes

--- a/index.html
+++ b/index.html
@@ -13,23 +13,36 @@
   </head>
   <body>
     <div class="teachers">
-      <!-- <button class="teachers__send" id="teachers__send">
+      <button class="teachers__send" id="teachers__send">
         Wyślij nauczycieli
-      </button> -->
+      </button>
       <form class="teachers__checkboxContainer" name="" id="">
-        <input type="checkbox" class="teachers__checkbox" value="Joanna Zamora"
-          >Joanna Zamora</input
-        >
-        <input type="checkbox"class="teachers__checkbox" value="Janusz Nowak"
-          >Janusz Nowak</input
-        >
-        <input type="checkbox" class="teachers__checkbox" value="Dagmara Jaskólska"
-          >Dagmara Jaskólska</input
-        >
-        <input type="checkbox"class="teachers__checkbox" value="Beata Placek"
-          >Beata Placek</input
-        >
-        <input type="checkbox"class="teachers__checkbox" value="Marcin Rał">Marcin Rał</input>
+          
+        <div class="teachers__inputContainer">
+        <input type="checkbox" id="teachers__checkbox1" class="teachers__checkbox" value="Joanna Zamora"></input>
+        <label for="teachers__checkbox1">Joanna Zamora</label>
+        </div>
+        
+        <div class="teachers__inputContainer">
+        <input type="checkbox" id="teachers__checkbox2" class="teachers__checkbox" value="Janusz Nowak"></input>
+        <label for="teachers__checkbox2">Janusz Nowak</label>
+        </div>
+
+        <div class="teachers__inputContainer">
+        <input type="checkbox" id="teachers__checkbox3" class="teachers__checkbox" value="Dagmara Jaskólska"></input>
+        <label for="teachers__checkbox3">Dagmara Jaskólska</label>
+        </div>
+
+        <div class="teachers__inputContainer">
+        <input type="checkbox" id="teachers__checkbox4"  class="teachers__checkbox" value="Beata Placek"></input>   
+        <label for="teachers__checkbox4">Beata Placek</label>
+         </div>
+
+        <div class="teachers__inputContainer">
+        <input type="checkbox" id="teachers__checkbox5"  class="teachers__checkbox" value="Marcin Rał"></input>
+        <label for="teachers__checkbox5">Marcin Rał</label>
+        </div>
+
       </form>
     </div>
     <div class="container">
