--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
     </div>
     <div class="container">
       <div class="absentTeachers">
+         <h2>Nieobecni nauczyciele</h2>
         <ol class="absentTeachers__list">
+            
           <li class="absentTeachers__person">Joanna Zamora</li>
           <li class="absentTeachers__person">Janusz Nowak</li>
           <li class="absentTeachers__person">Dagmara Jaskólska</li>
