Add absent teachers header

--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
     </div>
     <div class="container">
       <div class="absentTeachers">
-         <h2>Nieobecni nauczyciele</h2>
-        <ol class="absentTeachers__list">
+         <h2>Nieobecni nauczyciele: </h2>
+        <ul class="absentTeachers__list">
             
           <li class="absentTeachers__person">Joanna Zamora</li>
           <li class="absentTeachers__person">Janusz Nowak</li>
           <li class="absentTeachers__person">Dagmara Jaskólska</li>
           <li class="absentTeachers__person">Beata Placek</li>
           <li class="absentTeachers__person">Marcin Rał</li>
-        </ol>
+        </ul>
       </div>
       <table class="poniedzialek">
         <caption>
