--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
     <div class="container">
       <div class="absentTeachers">
          <h2>Nieobecni nauczyciele: </h2>
-        <ul class="absentTeachers__list">
+        <ul id="absentTeachers__list" class="absentTeachers__list">
             
-          <li class="absentTeachers__person">Joanna Zamora</li>
+          <!-- <li class="absentTeachers__person">Joanna Zamora</li>
           <li class="absentTeachers__person">Janusz Nowak</li>
           <li class="absentTeachers__person">Dagmara Jaskólska</li>
           <li class="absentTeachers__person">Beata Placek</li>
-          <li class="absentTeachers__person">Marcin Rał</li>
+          <li class="absentTeachers__person">Marcin Rał</li> -->
         </ul>
       </div>
       <table class="poniedzialek">
